Cambios de ruta

--- a/MammaMia/mammamiaapp/templates/base.html
+++ b/MammaMia/mammamiaapp/templates/base.html
@@ -35,10 +35,10 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="http://127.0.0.1:8000/mammamiaapp/" style="padding: 10px 20px;">Inicio</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="http://127.0.0.1:8000/mammamiaapp/pizzas" style="padding: 10px 20px;">Nuestras pizzas</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="http://127.0.0.1:8000/mammamiaapp/tiposmasa" style="padding: 10px 20px;">Nuestras masas</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="http://127.0.0.1:8000/mammamiaapp/ingredientes" style="padding: 10px 20px;">Nuestros Ingredientes</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="http://127.0.0.1:8000/" style="padding: 10px 20px;">Inicio</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="http://127.0.0.1:8000/pizzas" style="padding: 10px 20px;">Nuestras pizzas</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="http://127.0.0.1:8000/tiposmasa" style="padding: 10px 20px;">Nuestras masas</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="http://127.0.0.1:8000/ingredientes" style="padding: 10px 20px;">Nuestros Ingredientes</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
