--- a/MammaMia/mammamiaapp/templates/ingredientes.html
+++ b/MammaMia/mammamiaapp/templates/ingredientes.html
@@ -9,7 +9,7 @@
              <ul>
              {% for i in lista_ingredientes %}
                  <li>
-                     <a href="/mammamiaapp/ingredientes/{{ i.id }}">{{ i.nombre}}</a>
+                     <a href="/ingredientes/{{ i.id }}">{{ i.nombre}}</a>
                  </li>
                  <br>
              {% endfor %}
