--- a/MammaMia/mammamiaapp/templates/tiposmasa.html
+++ b/MammaMia/mammamiaapp/templates/tiposmasa.html
@@ -9,7 +9,7 @@
              <ul>
              {% for t in lista_tiposmasa %}
                  <li>
-                     <a href="/mammamiaapp/tiposmasa/{{ t.id }}">{{ t.nombre}}</a>
+                     <a href="/tiposmasa/{{ t.id }}">{{ t.nombre}}</a>
                  </li>
                  <br>
              {% endfor %}
