--- a/MammaMia/mammamiaapp/templates/index.html
+++ b/MammaMia/mammamiaapp/templates/index.html
@@ -68,7 +68,7 @@
                     <h3 class="u-custom-font u-font-oswald u-text u-text-2">Margarita</h3>
                     <p class="u-text u-text-default u-text-3">Tomate, mozzarella y orégano</p>
                     <h6 class="u-text u-text-palette-3-base u-text-4">10.00€</h6>
-                    <a href="http://127.0.0.1:8000/mammamiaapp/pizzas/2/" class="u-btn u-btn-rectangle u-button-style u-custom-font u-font-oswald u-grey-10 u-btn-1">iNFORMACIÓN</a>
+                    <a href="http://127.0.0.1:8000/pizzas/2/" class="u-btn u-btn-rectangle u-button-style u-custom-font u-font-oswald u-grey-10 u-btn-1">iNFORMACIÓN</a>
                   </div>
                 </div>
               </div>
@@ -81,7 +81,7 @@
                     <h3 class="u-custom-font u-font-oswald u-text u-text-default u-text-5">Barbacoa</h3>
                     <p class="u-text u-text-default u-text-6">Tomate, bacon, salsa bbq, pollo y ternera</p>
                     <h6 class="u-text u-text-palette-3-base u-text-7">10.50€</h6>
-                    <a href="http://127.0.0.1:8000/mammamiaapp/pizzas/1/" class="u-btn u-btn-rectangle u-button-style u-custom-font u-font-oswald u-grey-10 u-btn-2"> iNFORMACIÓN</a>
+                    <a href="http://127.0.0.1:8000/pizzas/1/" class="u-btn u-btn-rectangle u-button-style u-custom-font u-font-oswald u-grey-10 u-btn-2"> iNFORMACIÓN</a>
                   </div>
                 </div>
               </div>
@@ -94,7 +94,7 @@
                     <h3 class="u-custom-font u-font-oswald u-text u-text-default u-text-8">Calzone</h3>
                     <p class="u-text u-text-default u-text-9">Tomate, mozzarella, ternera y atún</p>
                     <h6 class="u-text u-text-palette-3-base u-text-10">$12.00</h6>
-                    <a href="http://127.0.0.1:8000/mammamiaapp/pizzas/6/" class="u-btn u-btn-rectangle u-button-style u-custom-font u-font-oswald u-grey-10 u-btn-3"> iNFORMACIÓN</a>
+                    <a href="http://127.0.0.1:8000/pizzas/6/" class="u-btn u-btn-rectangle u-button-style u-custom-font u-font-oswald u-grey-10 u-btn-3"> iNFORMACIÓN</a>
                   </div>
                 </div>
               </div>
@@ -107,7 +107,7 @@
                     <h3 class="u-custom-font u-font-oswald u-text u-text-11">Chicago</h3>
                     <p class="u-text u-text-default u-text-12">Mozzarella, pepperonin, bacon, parmesano, champiñones y jamón</p>
                     <h6 class="u-text u-text-palette-3-base u-text-13">$16.00</h6>
-                    <a href="http://127.0.0.1:8000/mammamiaapp/pizzas/9/" class="u-btn u-btn-rectangle u-button-style u-custom-font u-font-oswald u-grey-10 u-btn-4"> iNFORMACIÓN</a>
+                    <a href="http://127.0.0.1:8000/pizzas/9/" class="u-btn u-btn-rectangle u-button-style u-custom-font u-font-oswald u-grey-10 u-btn-4"> iNFORMACIÓN</a>
                   </div>
                 </div>
               </div>
