--- a/MammaMia/mammamiaapp/templates/pizzas.html
+++ b/MammaMia/mammamiaapp/templates/pizzas.html
@@ -8,7 +8,7 @@
              <ul>
              {% for p in lista_pizzas %}
                  <li>
-                     <a href="/mammamiaapp/pizzas/{{ p.id }}">{{ p.nombre}}</a>
+                     <a href="/pizzas/{{ p.id }}">{{ p.nombre}}</a>
                  </li>
                  <br>
              {% endfor %}
