Lista de ingredientes mediante Ajax (sin acabar aún)

--- a/MammaMia/mammamiaapp/templates/ingredientes.html
+++ b/MammaMia/mammamiaapp/templates/ingredientes.html
@@ -6,7 +6,8 @@
     
           {% block content %} 
           <div id = "ajax"> 
-            <p>Texto</p>
+            <ul id = "ajaxList">
+            </ul>
           </div>
          {% endblock %}
       
