--- a/MammaMia/mammamiaapp/templates/pizzas.html
+++ b/MammaMia/mammamiaapp/templates/pizzas.html
@@ -6,14 +6,8 @@
 
 {% block content %}
 <script class="u-script" type="text/javascript" src="{% static 'js/Pizzas.js' %}" defer=""></script>
-          {% if lista_pizzas %}
-             <ul>
-             {% for p in lista_pizzas %}
-                 <li>
-                     <a href="/pizzas/{{ p.id }}">{{ p.nombre}}</a>
-                 </li>
-                 <br>
-             {% endfor %}
-             </ul>
-         {% endif %}
+          <div id = "ajax"> 
+            <ul id = "ajaxList">
+            </ul>
+          </div>
 {% endblock %}
