--- a/MammaMia/mammamiaapp/templates/base.html
+++ b/MammaMia/mammamiaapp/templates/base.html
@@ -1,11 +1,12 @@
 {% load static %}
 <!DOCTYPE html>
-<html style="font-size: 16px;" lang="es"><head>
+<html style="font-size: 16px;" lang="es">
+  <head>
+    <title>Nuestras masas</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="Nuestras Masas">
     <meta name="description" content="">
-    <title>Nuestras masas</title>
     <link rel="stylesheet" href="{% static 'css/nicepage.css' %}" media="screen">
     <link rel="stylesheet" href="{% static 'css/Nuestras-Pizzas.css' %}" media="screen">
     <script class="u-script" type="text/javascript" src="{% static 'js/jquery.js' %}" defer=""></script>
@@ -14,12 +15,11 @@
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     
     
-    
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": ""
-}</script>
+    }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Nuestras masas">
     <meta property="og:type" content="website">
